package coreapi;

option java_package = "com.robonobo.core.api.proto";
option java_outer_classname = "CoreApi";

// Compile me from the eclipse workspace dir with protoc -I . --java_out=api/src/java api/src/java/com/robonobo/core/api/proto/coreapi.proto 
message EndPoint {
	required string url = 1;
}

message Node {
	required string id = 1;
	required string application_uri = 2;
	required int32 protocol_version = 3;
	optional bool supernode = 4;
	optional bool local = 5;
	repeated EndPoint end_point = 6;
}

message NodeList {
	repeated Node node = 1;
}

message StreamAttributeMsg {
	required string name = 1;
	required string value = 2;
}

message StreamMsg {
	required string id = 1;
	required string mime_type = 2;
	required string title = 3;
	required int64 size = 4;
	optional string description = 5;
	optional int64 duration = 6;
	repeated StreamAttributeMsg attribute = 7;
}

message UserMsg {
	required int64 id = 1;
	required string email = 2;
	required string friendly_name = 3;
	optional int32 invites_left = 4;
	optional string password = 5;
	optional string description = 6;
	optional string image_url = 7;
	optional int64 updated_date = 8;
	repeated int64 friend_id = 9;
	repeated int64 playlist_id = 10;
}

message PlaylistMsg {
	required int64 id = 1;
	required string title = 2;
	required string visibility = 3;
	optional int64 updated_date = 4;
	optional string description = 5;
	repeated string stream_id = 6;
	repeated int64 owner_id = 7;
}

message LibraryTrackMsg {
	required string stream_id = 1;
	optional int64 added_date = 2;
}

message LibraryMsg {
	optional int64 user_id = 1;
	repeated LibraryTrackMsg track = 2;
}

message InviteMsg {
	required int64 invite_id = 1;
	required string email = 2;
	required string invite_code = 3;
	optional int64 updated_date = 4;
	repeated int64 playlist_id = 5;
	repeated int64 friend_id = 6;
}

message FriendRequestMsg {
	required int64 friend_request_id = 1;
	required int64 requestor_id = 2;
	required int64 requestee_id = 3;
	required string request_code = 4;
	optional int64 updated_date = 5;
	repeated int64 playlist_id = 6;
}

message SearchResponse {
	required int32 firstResult = 1;
	required int32 totalResults = 2;
	repeated string object_id = 3;
}

message UserConfigItem {
	required string item_name = 1;
	required string item_value = 2;
}

message UserConfigMsg {
	required int64 user_id = 1;
	repeated UserConfigItem item = 2;
}

message UpdateMsg {
	required string updateHtml = 1;
	optional string updateTitle = 2;
}

message CommentMsg {
	required int64 comment_id = 1;
	required string resource_id = 2;
	required int64 user_id = 3;
	optional int64 parent_id = 4;
	required int64 date = 5;
	required string text = 6;
}
